--- a/News/News/NewsCell.xib
+++ b/News/News/NewsCell.xib
@@ -31,6 +31,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.96470588235294119" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="FG0-Y5-L7o" firstAttribute="leading" secondItem="Reh-uP-seS" secondAttribute="leading" id="UEg-Tw-ceg"/>
                     <constraint firstItem="FG0-Y5-L7o" firstAttribute="top" secondItem="Reh-uP-seS" secondAttribute="top" id="XHt-r9-o9k"/>
