--- a/News/News/NewsCell.xib
+++ b/News/News/NewsCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
@@ -13,29 +14,41 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FG0-Y5-L7o">
-                        <rect key="frame" x="0.0" y="0.0" width="139" height="80"/>
+                        <rect key="frame" x="3" y="3" width="135" height="74"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="139" id="jDJ-Ud-e1z"/>
+                            <constraint firstAttribute="width" constant="135" id="jDJ-Ud-e1z"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ls-l5-3tL">
-                        <rect key="frame" x="147" y="8" width="245" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ls-l5-3tL">
+                        <rect key="frame" x="147" y="4" width="245" height="52"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="52" id="ysQ-ge-Y7g"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ko-Rh-Drg">
-                        <rect key="frame" x="147" y="51" width="245" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ko-Rh-Drg">
+                        <rect key="frame" x="147" y="55" width="245" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="z16-2d-L83"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.96470588235294119" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="FG0-Y5-L7o" firstAttribute="leading" secondItem="Reh-uP-seS" secondAttribute="leading" id="UEg-Tw-ceg"/>
-                    <constraint firstItem="FG0-Y5-L7o" firstAttribute="top" secondItem="Reh-uP-seS" secondAttribute="top" id="XHt-r9-o9k"/>
-                    <constraint firstAttribute="bottom" secondItem="FG0-Y5-L7o" secondAttribute="bottom" id="mM4-n8-zEE"/>
+                    <constraint firstItem="7ls-l5-3tL" firstAttribute="top" secondItem="Reh-uP-seS" secondAttribute="top" constant="4" id="BuM-oe-caI"/>
+                    <constraint firstItem="FG0-Y5-L7o" firstAttribute="leading" secondItem="Reh-uP-seS" secondAttribute="leading" constant="3" id="UEg-Tw-ceg"/>
+                    <constraint firstItem="FG0-Y5-L7o" firstAttribute="top" secondItem="Reh-uP-seS" secondAttribute="top" constant="3" id="XHt-r9-o9k"/>
+                    <constraint firstAttribute="trailing" secondItem="7ls-l5-3tL" secondAttribute="trailing" constant="8" id="lpo-ur-4rR"/>
+                    <constraint firstAttribute="bottom" secondItem="FG0-Y5-L7o" secondAttribute="bottom" constant="3" id="mM4-n8-zEE"/>
+                    <constraint firstAttribute="trailing" secondItem="8ko-Rh-Drg" secondAttribute="trailing" constant="8" id="rA9-O5-pe2"/>
+                    <constraint firstItem="8ko-Rh-Drg" firstAttribute="leading" secondItem="FG0-Y5-L7o" secondAttribute="trailing" constant="9" id="sBY-zI-iTX"/>
+                    <constraint firstItem="7ls-l5-3tL" firstAttribute="leading" secondItem="FG0-Y5-L7o" secondAttribute="trailing" constant="9" id="xhi-sB-kGh"/>
+                    <constraint firstAttribute="bottom" secondItem="8ko-Rh-Drg" secondAttribute="bottom" constant="3.5" id="ybX-BM-eXQ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
